--- a/spaServer/public/pages/allDogs.html
+++ b/spaServer/public/pages/allDogs.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/styles/basicStyles.css">
-    <script type="module" src="/js/getAllHandler.js"></script>
+    <script type="module">
+        import { handleGetAllDogs } from './js/handlers.js';
+        document.addEventListener('DOMContentLoaded', handleGetAllDogs);
+    </script>
 </head>
+
 <body>
     <main>
-        <h1>All Computers</h1>
+        <h1>All Dogs</h1>
         <table>
             <thead>
                 <tr>
-                    <th>id</th>
-                    <th>name</th>
-                    <th>price</th>
-                    <th>type</th>
+                    <th>Number</th>
+                    <th>Name</th>
+                    <th>Weight in Kg</th>
+                    <th>Breed</th>
+                    <th>Year of Birth</th>
                 </tr>
             </thead>
             <tbody id="resultset"></tbody>
@@ -24,4 +30,5 @@
         <a href="/"><button>Menu</button></a>
     </main>
 </body>
+
 </html>
