--- a/spaServer/public/pages/oneDog.html
+++ b/spaServer/public/pages/oneDog.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/styles/basicStyles.css">
-    <script type="module" src="/js/getOneHandler.js"></script>
+    <script type="module">
+        import { handleGetOneDog } from './js/handlers.js';
+        handleGetOneDog();
+    </script>
+
 </head>
+
 <body>
     <main>
-        <h1>Get one computer</h1>
-        <label>Id: <input type="text" id="compId"></label>
+        <h1>Get one Dog</h1>
+        <label>Number: <input type="text" id="dogNumber"></label>
         <div>
-            <button id="getbutton">get</button>
-            <button id="postbutton">post</button>
+            <button id="getbutton">Fetch Dog</button>
+            <!--             <button id="postbutton">post</button>
+ -->
         </div>
         <div id="resultarea"></div>
         <a href="/"><button>Menu</button></a>
     </main>
 </body>
+
 </html>
