--- a/spaServer/public/pages/removeDog.html
+++ b/spaServer/public/pages/removeDog.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/styles/basicStyles.css">
-    <script type="module" src="/js/removeOneHandler.js"></script>
+    <script type="module">
+        import { handleRemoveDog } from './js/handlers.js';
+        handleRemoveDog();
+    </script>
 </head>
+
 <body>
     <main>
-        <h1>Remove one computer</h1>
-        <label>Id: <input type="text" id="compId"></label>
+        <h1>Remove one Dog</h1>
+        <label>Id: <input type="text" id="dogNumber"></label>
         <div>
             <button id="postbutton">post</button>
         </div>
@@ -18,4 +23,5 @@
         <a href="/"><button>Menu</button></a>
     </main>
 </body>
+
 </html>
