fix sql.json file and api.js missing exports

--- a/spaServer/public/pages/allDogs.html
+++ b/spaServer/public/pages/allDogs.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/basicStyles.css">
     <script type="module">
-        import { handleGetAllDogs } from './js/handlers.js';
+        import { handleGetAllDogs } from '../js/handlers.js';
         document.addEventListener('DOMContentLoaded', handleGetAllDogs);
     </script>
 </head>
