--- a/spaServer/public/pages/oneDog.html
+++ b/spaServer/public/pages/oneDog.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/basicStyles.css">
     <script type="module">
-        import { handleGetOneDog } from './js/handlers.js';
+        import { handleGetOneDog } from '../js/handlers.js';
         handleGetOneDog();
     </script>
 
@@ -19,8 +19,6 @@
         <label>Number: <input type="text" id="dogNumber"></label>
         <div>
             <button id="getbutton">Fetch Dog</button>
-            <!--             <button id="postbutton">post</button>
- -->
         </div>
         <div id="resultarea"></div>
         <a href="/"><button>Menu</button></a>
