--- a/spaServer/public/pages/removeDog.html
+++ b/spaServer/public/pages/removeDog.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/basicStyles.css">
     <script type="module">
-        import { handleRemoveDog } from './js/handlers.js';
+        import { handleRemoveDog } from '../js/handlers.js';
         handleRemoveDog();
     </script>
 </head>
@@ -15,7 +15,7 @@
 <body>
     <main>
         <h1>Remove one Dog</h1>
-        <label>Id: <input type="text" id="dogNumber"></label>
+        <label>Number: <input type="text" id="dogNumber"></label>
         <div>
             <button id="postbutton">post</button>
         </div>
