--- a/spaServer/public/pages/insertForm.html
+++ b/spaServer/public/pages/insertForm.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/basicStyles.css">
     <script type="module">
-        import { handleAddDog } from './js/handlers.js';
+        import { handleAddDog } from '../js/handlers.js';
         handleAddDog();
     </script>
 
