add update dog function

--- a/spaServer/public/index.html
+++ b/spaServer/public/index.html
@@ -13,8 +13,9 @@
         <h1>Menu</h1>
         <a href="/pages/allDogs.html"><button>All Dogs</button></a>
         <a href="/pages/oneDog.html"><button>One Dog</button></a>
-        <a href="/pages/removeDog.html"><button>Remove Dog</button></a>
+        <a href="/pages/updateDog.html"><button>Update Dog</button></a>
         <a href="/pages/insertForm.html"><button>Add Dog</button></a>
+        <a href="/pages/removeDog.html"><button>Remove Dog</button></a>
     </main>
 </body>
 
